# dividator

./: .gitignore  Cargo.toml  default.nix  shell.nix
dividator/: Cargo.toml
dividator/src/: db.rs  lib.rs
dividator/src/cache/: mod.rs
dividator/src/state/: admin.rs  mod.rs
dividator_service/: Cargo.toml
dividator_service/src/: main.rs
dividator_service/src/api/: mod.rs  types.rs
dividator_service/src/api/auth/: cache.rs  mod.rs  routes.rs  types.rs
dividator_service/static/css/: style.css
dividator_service/templates/: base.html.hbs  index.html.hbs  init.html.hbs  signin.html.hbs
migrator/: Cargo.toml
migrator/src/: main.rs
