[package]
name = "dividator_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bech32 = "0.9.0"
chrono = "0.4.19"
dividator = { path = "../dividator" }
futures = "0.3.19"
hex = "0.4.3"
image = "0.23.14"
log = "0.4.17"
qrcode = "0.12.0"
rand = "0.8.5"
ctrlc = "3.2.2"
num-format = "0.4.0"
secp256k1 = { version = "0.24.0", features = [ "bitcoin_hashes" ] }
tempfile = "3.3.0"
thiserror = "1.0.31"
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0-rc.2", default-features = false, features = [
  "json",
  "secrets",
] }
rocket_okapi = { git = "https://github.com/ThouCheese/okapi", branch = "feat/rocket0.5-rc.2", features = [
  "rapidoc",
  "swagger",
] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
schemars = "0.8.8"
figment = { version = "0.10", features = ["toml", "env"] }
clap = { version = "3.2.14", features = ["derive", "env"] }
env_logger = { version = "0.9.0" }
